--- a/_posts/0000-01-02-kaffac.md
+++ b/_posts/0000-01-02-kaffac.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+Be a **diligent** person and *work hard* !
 Use the left arrow to go back!
